Closed Bug 126824 Opened 24 years ago Closed 24 years ago

[FIX]Background doesn't paint the correct rect

Categories

(Core :: Printing: Output, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: dcone, Assigned: rods)

Details

Attachments

(1 file, 1 obsolete file)

The background drawing code is in the wrong frame currently, needs to be moved so that it is not offset. Also.. it should only draw once.. with the background paint.
Status: NEW → ASSIGNED
Keywords: nsbeta1
Target Milestone: --- → mozilla0.9.9
Summary: Move the drawbackground from nsPageFrame to nsPageContentFrame → Background doesn't paint the correct rect
Attached patch patch (obsolete) — Splinter Review
Low risk - Get the rect of the PageContentFrame and using it. Also, painting BG after the container and only when we are suppose to be painting the BG
Comment on attachment 70604 [details] [diff] [review] patch r=dcone
Attachment #70604 - Flags: review+
Attached patch better patchSplinter Review
After discussing this with don the BG should be painted before going to the PageContentFrame, in case any of its children need to paint a BG.
Attachment #70604 - Attachment is obsolete: true
Comment on attachment 70609 [details] [diff] [review] better patch r=dcone
Attachment #70609 - Flags: review+
Marking nsbeta1+. This is a highly visible issue. I noticed this bug right away when I turned on printing background colors and went into print-preview.
Keywords: nsbeta1nsbeta1+
Summary: Background doesn't paint the correct rect → [FIX]Background doesn't paint the correct rect
Comment on attachment 70609 [details] [diff] [review] better patch sr=attinasi
Attachment #70609 - Flags: superreview+
fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Rod/Don, can one of you verify this bug ? thanks...mark it verified-fixed also..
Paints in teh correct spot. Verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: