Get the rect of the PageContentFrame and using it. Also, painting BG after the container and only when we are suppose to be painting the BG Bug 126824 r=dcone sr=attinasi a=dbaron